<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:touchscreenBlocksFocus="true"
    android:theme="@style/Widget.AppCompat.ActionButton.CloseMode">

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textColor="@color/textColorPrimary"
        android:textStyle="bold"
        android:id="@+id/btn_start"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/hg_scr"
        android:textColor="@color/textColorPrimary"
        android:textStyle="bold"
        android:id="@+id/btn_scr"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/credit"
        android:textColor="@color/textColorPrimary"
        android:textStyle="bold"
        android:id="@+id/btn_cdt"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

</LinearLayout>