<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/hg_scr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize"
            android:background="?colorPrimary"
            android:gravity="center_vertical"
            android:text="@string/credit"
            android:paddingLeft="75dp"
            android:textSize="11pt"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary" />
        <ImageButton android:id="@+id/back"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_arrow_back_24dp"
            android:tint="@color/textColorPrimary"
            android:layout_gravity="start|center_vertical"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/ar_back"
            android:theme="@style/Base.Widget.AppCompat.ActionBar" />
    </FrameLayout>

    <FrameLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pic2"
            android:contentDescription="@string/pic"
            android:layout_gravity="right|center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/two"
            android:layout_gravity="center"
            android:gravity="fill_horizontal|center_horizontal"
            android:layout_marginRight="40dp" />

    </FrameLayout>

    <FrameLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pic1"
            android:contentDescription="@string/boku"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/one"
            android:layout_gravity="center"
            android:gravity="center_vertical|fill_vertical"
            android:layout_marginLeft="40dp" />
    </FrameLayout>

</LinearLayout>